<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_dev"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/devImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/about_dev"
            android:onClick="openBrowser"
            android:tag="https://www.fsf.org/"
            app:srcCompat="@drawable/ps" />

        <TextView
            android:id="@+id/devTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_bunnyspa"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/disclaimerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/about_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/opensource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/oss"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
</ScrollView>